# Zoomy

./: .env  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .nojekyll  Model8.H  README  README.md  _association_table.ini  _boundaries.h5  _boundaries.xdmf  _domain.h5  _domain.xdmf  _quarto-public.yml  _quarto.yml  about.html  activate.sh  app.py  basicelements.py  core.login23-3.hpc.itc.rwth-aachen.de.54747.7  decorator_test.py  demo_smm_sediment.ipynb  demo_smm_sediment.py  env-cuda.yml  env-test.py  env-test.yml  environment-game.yml  environment.yml  gui.ipynb  index.css  index.html  index.qmd  init.H  install.sh  legal.html  listings.json  mypy.ini  profiling.py  publications.html  (+18 more)
api/: fvm.solver.Settings.html  index.html
apps/: main.py
channel_2d_hole/: mesh.geo
channel_of/: mesh.geo
channel_openfoam/: mesh.geo  mesh_3d.geo
channel_quad_2d/: mesh.geo  mesh3d.geo
channel_quad_3d/: mesh.geo  mesh.neu
curved_open_channel/: geometry.py
curved_open_channel_extended/: mesh.geo
docs/: architecture.odp  index.html  index.ipynb  intro.ipynb  logging.html  mbd.scss  references.bib
examples/: index.html
firedrake/: SWE_DG.py  SWE_extr.py  VOM.py  depth_integrator.py  depth_integrator_new.py  layers.py  mass_matrix.py  mpi_example.py  mpi_smm_ref2.py  smm.py  smm_ref.py  test.py
friction_dataset_1d/: postprocess_eularian_data.py
fvm/: nonconservative_flux.py  solver_jax.py  solver_numpy.py
gui/: docstring_crawler.py  docstring_crawler_old.py  draw.py  draw_and_image.py  drawing_panel.py  gui.py  gui_elements.py  gui_mesh.py  gui_model.py  gui_model_editor.py  gui_solver.py  gui_visu_editor.py  gui_visualization.py  main.py  stream_tools.py  test.py  (+3 more)
(+669 files in other folders)
